add some redirects and comment usercontroller

--- a/templates/tableau.html.twig
+++ b/templates/tableau.html.twig
@@ -31,7 +31,7 @@
                 {% endif %}
                 {% if not app.user %}
                     <form action="{{ path('login') }}">
-                        <button>Inscrivez-vous</button> <!-- Diriger vers le formulaire Création de trajet-->
+                        <button>Inscrivez-vous</button>
                     </form>
                 {% else %}
                     <p class="not-note">pas de note</p>
@@ -44,7 +44,9 @@
                     </p>
                     <p class="email-profil">{{ app.user.email }}</p>
                 </div>
-                <button>Modifier votre profil</button>
+                <form action="{{ path('editAccount') }}">
+                    <button>Modifiez votre profil</button>
+                </form>
                 {% endif %}
             </div>
             <div class="main-trip">
