modif du tableau.html.twig

--- a/templates/tableau.html.twig
+++ b/templates/tableau.html.twig
@@ -43,8 +43,11 @@
                         <span class="lastname"> {{ app.user.lastname }}</span>
                     </p>
                     <p class="email-profil">{{ app.user.email }}</p>
+                    <p class="email-profil">{{ app.user.Tel }}</p>
+                    <p class="email-profil">{{ app.user.Vehicle }}</p>
                 </div>
                 <button>Modifier votre profil</button>
+
                 {% endif %}
             </div>
             <div class="main-trip">
