--- a/templates/run/addRun.html.twig
+++ b/templates/run/addRun.html.twig
@@ -3,5 +3,16 @@
 {% block title %}Ajouter un Trajet{% endblock %}
 
 {% block body %}
-    {{ form(runForm) }}
+
+     <main class="connect-form">
+        <h2>Ajouter un trajet</h2>
+        {{ form_start(runForm) }}
+        {{ form_row(runForm.departure, { 'label': '* Ville de départ' }) }}
+        {{ form_row(runForm.arrival, { 'label': '* Ville d\'arrivée' }) }}
+        {{ form_row(runForm.departureSchedule, { 'label': '* Date et heure du départ' }) }}
+        {{ form_row(runForm.places, { 'label': '* Nbr de places' }) }}
+        {{ form_row(runForm.price, { 'label': '* Prix par personnes en €' }) }}
+        {{ form_row(runForm.submit) }}
+        {{ form_end(runForm) }}
+    </main>
 {% endblock %}
