--- a/templates/user/login.html.twig
+++ b/templates/user/login.html.twig
@@ -10,7 +10,7 @@
 
     <main class="connect-form">
             <h2>Connexion</h2>
-            <form action="{{ path('login') }}" method="POST"> <!-- Action : page avec le résultat - Method : get -->
+            <form action="{{ path('account') }}" method="POST"> <!-- Action : page avec le résultat - Method : get -->
                 <div class="input-icon">
                     <label for="username">Email</label>
                     <input  type="email" id="username" name="_username" value="{{ last_username }}">
