--- a/css/style.scss
+++ b/css/style.scss
@@ -14,21 +14,6 @@
 		align-items: center;
 	}
 
-	.alert {
-		height: 80px;
-	}
-
-	.alert-success {
-		background-color: #d6efb4;
-		color: $green;
-	}
-
-	
-	.alert-success {
-		background-color: #efb4b4;
-		color: $red;
-	}
-
 	.container {
 		width: 70%;
 	}
@@ -591,25 +576,11 @@
 				
 				select {
 					@extend input;
-					display: inline-block;
-					margin: 0px 2px;
-				}
-
-				select[name="run[places]"] {
-					margin: 0px;
-					width: 50px;
-				}
-
-				#run_departureSchedule_time {
-					margin-bottom: 0px;
-				}
-
-				#run_price {
-					width: 100px;
+					margin: 10px 2px;
 				}
 				
 				> div {
-					margin: 5px auto;
+					margin: 50px auto;
 					width: 330px;
 					display: flex;
 					flex-direction: column;
@@ -618,12 +589,10 @@
 						display: flex;
 						align-items: center;
 					}
-					
-					#run_departureSchedule {
-						margin-bottom:0px;
-					}
+		
 					> div {
 						display: flex;
+						flex-direction: column;
 						margin: 0px 0px 20px 0px;
 						
 						input {
@@ -635,8 +604,9 @@
 						
 						select {
 							@extend input;
-							margin: 2px 2px;
+							margin: 10px 2px;
 						}
+						
 					}
 				}
 			}
