--- a/public/css/style.css
+++ b/public/css/style.css
@@ -721,3 +721,25 @@ footer {
 /* END DASHBOARD PAGE */
 
 /*# sourceMappingURL=style.css.map */
+
+#account-title{
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.account-liens{
+  margin-bottom: 30px;
+}
+
+.account-detail{
+  margin-top: 30px;
+  border: 1px solid palevioletred;
+  background-color: white;
+  border-radius: 5px;
+  height: 300px;
+  width: 700px;
+}
+
+body{
+
+}
