--- a/templates/tableau/search_ride.html.twig
+++ b/templates/tableau/search_ride.html.twig
@@ -7,7 +7,7 @@
     {{ form.formSearch() }}
     <!-- ETIQUETTES -->
     {% for run in runs %}
-    <a class="trip" href="#">
+    <a class="trip" href="{{ path('detailRun', {"id":run.id}) }}">
         <div class="img-rider">
             <div class="img-profil-rider" style="background-image:url('{{ asset('img/dog.jpg') }}'); -webkit-filter: saturate(40%);"></div>
             <p>Conducteur(.trice)</p>
