--- a/public/css/style.css
+++ b/public/css/style.css
@@ -722,24 +722,52 @@ footer {
 
 /*# sourceMappingURL=style.css.map */
 
+.account-main{
+  color: #1b1b1b;
+  margin: 1px auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 #account-title{
   margin-top: 30px;
   margin-bottom: 30px;
 }
 
 .account-liens{
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 .account-detail{
-  margin-top: 30px;
+  font-family: "latoRegular", arial, sans-serif;
+  margin-top: 20px;
+  margin-bottom: 30px;
   border: 1px solid palevioletred;
   background-color: white;
   border-radius: 5px;
   height: 300px;
   width: 700px;
+  display: flex;
+  flex-direction: row;
 }
 
-body{
+.account-detail span{
+  color: #E6146C;
+  margin-right: 10px;
+}
 
+.account-detail li{
+ margin-bottom: 15px;
+}
+
+.account-img{
+  height: 300px;
+  width: 150px;
+  flex: auto;
+  background-color: snow;
+}
+.account-list{
+  flex: auto;
 }
