--- a/templates/tableau/ride_to_court.html.twig
+++ b/templates/tableau/ride_to_court.html.twig
@@ -11,7 +11,7 @@
             <div class="name-step">
                 <p class="name">{{ run.driver.lastname | upper }} {{ run.driver.firstname }}</p>
                 <p class="phone">Nbr de places restantes : <span>{{ run.places }}</span></p>
-                <p class="city">{{ run.departure.cityName }}<span>--></span> T{{ run.arrival.cityName }}</p>
+                <p class="city">{{ run.departure.cityName }}<span>--></span> {{ run.arrival.cityName }}</p>
             </div>
             <div class="date-ride">
                 <p class="day">{{ run.departureSchedule.format('d') }}</p>
