add edit account upload functionality

--- a/templates/tableau.html.twig
+++ b/templates/tableau.html.twig
@@ -51,7 +51,7 @@
                         <span class="account-span">Email:</span>
                         <p class="email-profil">{{ app.user.email }}</p>
                         <span class="account-span">Tel:</span>
-                        <p class="email-profil">{{ app.user.tel }}</p>
+                        <p class="email-profil">0{{ app.user.tel }}</p>
                         <span class="account-span">Vehicule:</span>
                         <p class="email-profil">{{ app.user.vehicle }}</p>
                     </div>
