--- a/templates/macros/form_search.html.twig
+++ b/templates/macros/form_search.html.twig
@@ -4,11 +4,11 @@
     <form action="#" class="form-search" method="GET"> <!-- Action : page avec le résultat - Method : get -->
         <div class="input-icon">
             <img src="{{ asset('img/localisation.png') }}" alt="Une icone pour le départ">
-            <input type="text" name="departure" placeholder="d'où partez-vous?">
+            <input id="search-run-departure" type="text" name="search-run-departure" placeholder="d'où partez-vous?">
         </div>
         <div class="input-icon">
             <img src="{{ asset('img/destination.png') }}" alt="Une icone pour la destination">
-            <input type="text" name="arrival" placeholder="où allez-vous ?">
+            <input id="search-run-arrival" type="text" name="search-run-departure" placeholder="où allez-vous ?">
         </div>
         <div class="input-icon">
             <img src="{{ asset('img/calendar.png') }}" alt="Une icone de calendrier">
