--- a/templates/tableau/search_ride.html.twig
+++ b/templates/tableau/search_ride.html.twig
@@ -6,7 +6,7 @@
 
     {{ form.formSearch() }}
     <!-- ETIQUETTES -->
-    {% for run in runs.departureRuns %}
+    {% for run in runs %}
 
     <a class="trip" href="{{ path('detailRun', {"id":run.id}) }}">
         <div class="img-rider">
