--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -747,9 +747,21 @@
 		margin: 70px auto;
 		margin-left: 50px;
 
+
 		#map {
 			width: 100%;
 			height: 400px;
+			background-image: url("../img/map.png");
+		}
+
+		div {
+			color: $rose;
+			font-size: 2rem;
+		}
+
+		span {
+			display: flex;
+			height: 30px;
 		}
 	}
 
