--- a/templates/run/addRun.html.twig
+++ b/templates/run/addRun.html.twig
@@ -4,8 +4,7 @@
 
 {% block body %}
 
-<<<<<<< HEAD
-     <main class="connect-form main-add-run">
+     {#<main class="connect-form main-add-run">
         <div class="connect-form">
         <h2>Ajouter un trajet</h2>
             {{ form_start(runForm) }}
@@ -19,8 +18,8 @@
         </div>
         <div class="map-form-run">
             
-        </div>
-=======
+        </div>#}
+
      <main class="connect-form-run">
          <h2>Ajouter un trajet</h2>
          <div class="add-run">
@@ -40,7 +39,6 @@
                 <div id="map"></div>
             </div>
          </div>
->>>>>>> 7e0532a89775a92d7b0bdf7017ae05549e522bef
-    </main>
+     </main>
 
 {% endblock %}
