--- a/templates/tableau.html.twig
+++ b/templates/tableau.html.twig
@@ -26,7 +26,7 @@
                         <div class="img-profil" style="background-image:url('{{ asset('img/dog.jpg') }}'); -webkit-filter: saturate(40%);"></div>
                 {% else %}
                     {% if app.user.picture != null %}
-                        <div class="img-profil" style="background-image:url( '{{ app.user.picture }}' )"></div>
+                        <div class="img-profil" style="background-image:url( '{{ asset('img_upload/' ~ app.user.picture) }}' )"></div>
                     {% else %}
                         <div class="img-profil" style="background-image:url('{{ asset('img/dog.jpg') }}'); -webkit-filter: saturate(40%);"></div>
                     {% endif %}
